[global]
quiet = 1

[metadata]
name = forest
description = Dejavu forest
author = stwind
version = 0.1.0

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    boltons==18.0.1
    slackclient==1.3.0

setup_requires = pytest-runner; wheel
tests_require =
    pytest
    boto3==1.9.86
    moto==1.3.7

[aliases]
test = pytest
release = clean --all bdist_wheel

[tool:pytest]
addopts = --verbose -s -p no:warnings
testpaths = tests
